--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Car</title>
+    <link rel="shortcut icon" href="car-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
 </head>
